@@ -1,0 +1,13 @@
+##############################################################################
+# pgAdmin III - PostgreSQL Tools
+# $Id: Makefile.am 4874 2006-01-06 17:33:27Z dpage $
+# Copyright (C) 2002 - 2006, The pgAdmin Development Team
+# This software is released under the Artistic Licence
+#
+# Makefile - Makefile for *nix systems
+##############################################################################
+
+EXTRA_DIST = \
+	$(srcdir)/readme.txt
+	$(srcdir)/setup0-msw-2.6.0.h \
+	$(srcdir)/wx-pgadmin.dsw
