@@ -19,6 +19,7 @@ The following list contains all changes to pgAdmin III, as present in svn.
 </ul>
 <br>
 <ul>
+    <li>2006-01-30 DP  1.4.2  Add missing files to the Unix tarball, per Andrus - xtra/wxbuild/*, src/utils/precomp.cpp, src/main/pgAdmin3.rc
     <li>2006-01-23 MH  1.4.2  Read config files in the local encoding scheme
     <li>2006-01-17 DP  1.4.2  Display the defintion of set returning procedures correctly.
     <li>2006-01-17 DP  1.4.2  Fix drop procedure by including IN/OUT parameter flags in the name.
